Refactor reactions service
