# src/main/java/com/social/reactions/api/ReactionsController.java
@@ -1,15 +1,18 @@
 package com.social.reactions.api;
 
 import com.social.api.ReactionsApi;
-import com.social.model.ParentType;
 import com.social.model.ReactionDto;
 import com.social.reactions.model.Reaction;
 import com.social.reactions.model.ReactionType;
 import com.social.reactions.service.ReactionsService;
+import com.social.users.model.SocialUser;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.UUID;
 
 @RestController
 @RequestMapping("/")
@@ -21,28 +24,38 @@ public class ReactionsController implements ReactionsApi {
   }
 
   @Override
-  public ResponseEntity<Void> deleteReactionsReactionId(String parentId) {
-    String userId = "JFDOJ";
-    reactionsService.deleteReaction(userId,parentId);
+  public ResponseEntity<Void> deleteReaction(UUID reactionId) {
+    SocialUser user = (SocialUser) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+    reactionsService.deleteReaction(user.getId(), reactionId);
     return new ResponseEntity<>(HttpStatus.OK);
   }
 
   @Override
-  public ResponseEntity<ReactionDto> putReactions(ReactionDto reactionDto) {
-    Reaction reaction = peactionDtoToReaction(reactionDto);
-    if(!reactionsService.doesParentExist(reaction.getParentId())) {
-      return new ResponseEntity<>(HttpStatus.NOT_FOUND);
-    }
+  public ResponseEntity<Void> postReaction(ReactionDto reactionDto) {
+    Reaction reaction = reactionDtoToReaction(reactionDto);
     reactionsService.createReaction(reaction);
     return new ResponseEntity<>(HttpStatus.CREATED);
   }
 
-  private Reaction peactionDtoToReaction(ReactionDto reactionDto)
-  {
-    String userId = "JFDOJ";
-    String parentId = reactionDto.getParentId();
-    ParentType parentType = ParentType.valueOf(reactionDto.getParentType());
-    ReactionType reactionType = ReactionType.valueOf(reactionDto.getReactionType().toString());
-    return new Reaction(userId,parentId,parentType,reactionType);
+  @Override
+  public ResponseEntity<ReactionDto> putReaction(UUID reactionId, ReactionDto reactionDto) {
+    Reaction reaction = reactionDtoToReaction(reactionDto);
+    reaction.setReactionId(reactionId);
+    if (!reactionsService.doesReactionExist(reaction.getReactionId())) {
+      throw new IllegalArgumentException("Reaction does not exist");
+    }
+    reactionsService.updateReactionType(reaction);
+    return new ResponseEntity<>(HttpStatus.OK);
+
+  }
+
+  private Reaction reactionDtoToReaction(ReactionDto reactionDto) {
+    SocialUser user = (SocialUser) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+    return Reaction.builder()
+        .userId(user.getId())
+        .parentId(reactionDto.getParentId())
+        .parentType(reactionDto.getParentType())
+        .reactionType(ReactionType.valueOf(reactionDto.getReactionType().toString().toUpperCase()))
+        .build();
   }
 }
